
Change Log for Kicad
Started 2007-June-11

Please add newer entries at the top, list the date and your name with
email address.

2008-Mar-30 UPDATE  Jonas Diemer <diemer-at-gmx.de>
================================================================================
+eeschema
    Removed artifacts resulting from redraws in XOR-Mode.

2008-Mar-24 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    Ensure graphic and footprint texts have a sufficient size to be seen on screen.
    (bug 1909165, due to text on edge layer with a 0 value for X size)

2008-Mar-22 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    Netlist dialog redesigned, netlist.cpp code modified
    and added an option to remove not locked footprints
    when not found in netlist


2008-Mar-21 UPDATE   Dick Hollenbeck <dick@softplc.com>
================================================================================
+pcbnew
    pcbplot.cpp now saves the selected layers as wxConfig options,
    i.e. retentitively.  The ESC key now works in that dialog.
    Make upper/lower case conformat to UIpolicies.txt
    Put buttons at bottom, "Close" as bottom button.


2008-Mar-21 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+eeschema
    Removed an very old bug in onrightclick.cpp which crashes eeschema when
    right clicking in a field inside a component.
    Old code should never works,	but ...


2008-Mar-20 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
================================================================================
+pcbnew
    refined the dialog_freeroute_exchange
    If possible (i.e. if freeroute.jnlp is found in kicad binary directory) javaws is called insteed of the default browser)