@@ -99,11 +99,11 @@ WinEDA_SheetPropertiesFrame::WinEDA_SheetPropertiesFrame( WinEDA_SchematicFrame*
 
     AddUnitSymbol( *m_SheetNameTextSize );
     PutValueInLocalUnits( *m_SheetNameSize, m_CurrentSheet->m_SheetNameSize,
-                          m_Parent->m_InternalUnits );
+        m_Parent->m_InternalUnits );
 
     AddUnitSymbol( *m_FileNameTextSize );
     PutValueInLocalUnits( *m_FileNameSize, m_CurrentSheet->m_FileNameSize,
-                          m_Parent->m_InternalUnits );
+        m_Parent->m_InternalUnits );
 }
 
 
@@ -163,55 +163,55 @@ void WinEDA_SheetPropertiesFrame::CreateControls()
     itemBoxSizer3->Add( itemBoxSizer4, 0, wxALIGN_CENTER_VERTICAL | wxALL, 5 );
 
     wxStaticText* itemStaticText5 = new wxStaticText( itemDialog1, wxID_STATIC, _(
-                                                          "Filename:" ), wxDefaultPosition,
-                                                      wxDefaultSize, 0 );
+            "Filename:" ), wxDefaultPosition,
+        wxDefaultSize, 0 );
     itemBoxSizer4->Add( itemStaticText5,
-                        0,
-                        wxALIGN_LEFT | wxLEFT | wxRIGHT | wxTOP | wxADJUST_MINSIZE,
-                        5 );
+        0,
+        wxALIGN_LEFT | wxLEFT | wxRIGHT | wxTOP | wxADJUST_MINSIZE,
+        5 );
 
     m_FileNameWin =
         new wxTextCtrl( itemDialog1, ID_TEXTCTRL1, _T( "" ), wxDefaultPosition, wxSize( 300,
-                                                                                        -1 ),
-                        wxTE_PROCESS_ENTER );
+                -1 ),
+            wxTE_PROCESS_ENTER );
     itemBoxSizer4->Add( m_FileNameWin, 0, wxALIGN_LEFT | wxLEFT | wxRIGHT | wxBOTTOM, 5 );
 
     wxStaticText* itemStaticText7 = new wxStaticText( itemDialog1, wxID_STATIC, _(
-                                                          "Sheetname:" ), wxDefaultPosition,
-                                                      wxDefaultSize, 0 );
+            "Sheetname:" ), wxDefaultPosition,
+        wxDefaultSize, 0 );
     itemBoxSizer4->Add( itemStaticText7,
-                        0,
-                        wxALIGN_LEFT | wxLEFT | wxRIGHT | wxTOP | wxADJUST_MINSIZE,
-                        5 );
+        0,
+        wxALIGN_LEFT | wxLEFT | wxRIGHT | wxTOP | wxADJUST_MINSIZE,
+        5 );
 
     m_SheetNameWin =
         new wxTextCtrl( itemDialog1, ID_TEXTCTRL, _T( "" ), wxDefaultPosition, wxSize( 300,
-                                                                                       -1 ), 0 );
+                -1 ), 0 );
     itemBoxSizer4->Add( m_SheetNameWin, 0, wxALIGN_LEFT | wxLEFT | wxRIGHT | wxBOTTOM, 5 );
 
     wxBoxSizer* itemBoxSizer9 = new wxBoxSizer( wxVERTICAL );
     itemBoxSizer3->Add( itemBoxSizer9, 0, wxALIGN_CENTER_VERTICAL | wxALL, 5 );
 
     m_FileNameTextSize = new wxStaticText( itemDialog1, wxID_STATIC, _(
-                                               "Size" ), wxDefaultPosition, wxDefaultSize, 0 );
+            "Size" ), wxDefaultPosition, wxDefaultSize, 0 );
     itemBoxSizer9->Add( m_FileNameTextSize,
-                        0,
-                        wxALIGN_LEFT | wxLEFT | wxRIGHT | wxTOP | wxADJUST_MINSIZE,
-                        5 );
+        0,
+        wxALIGN_LEFT | wxLEFT | wxRIGHT | wxTOP | wxADJUST_MINSIZE,
+        5 );
 
     m_FileNameSize = new wxTextCtrl( itemDialog1, ID_TEXTCTRL2, _T(
-                                         "" ), wxDefaultPosition, wxDefaultSize, 0 );
+            "" ), wxDefaultPosition, wxDefaultSize, 0 );
     itemBoxSizer9->Add( m_FileNameSize, 0, wxALIGN_LEFT | wxLEFT | wxRIGHT | wxBOTTOM, 5 );
 
     m_SheetNameTextSize = new wxStaticText( itemDialog1, wxID_STATIC, _(
-                                                "Size" ), wxDefaultPosition, wxDefaultSize, 0 );
+            "Size" ), wxDefaultPosition, wxDefaultSize, 0 );
     itemBoxSizer9->Add( m_SheetNameTextSize,
-                        0,
-                        wxALIGN_LEFT | wxLEFT | wxRIGHT | wxTOP | wxADJUST_MINSIZE,
-                        5 );
+        0,
+        wxALIGN_LEFT | wxLEFT | wxRIGHT | wxTOP | wxADJUST_MINSIZE,
+        5 );
 
     m_SheetNameSize = new wxTextCtrl( itemDialog1, ID_TEXTCTRL3, _T(
-                                          "" ), wxDefaultPosition, wxDefaultSize, 0 );
+            "" ), wxDefaultPosition, wxDefaultSize, 0 );
     itemBoxSizer9->Add( m_SheetNameSize, 0, wxALIGN_LEFT | wxLEFT | wxRIGHT | wxBOTTOM, 5 );
 
     itemBoxSizer2->Add( 5, 5, 1, wxGROW | wxALL, 5 );
@@ -220,12 +220,12 @@ void WinEDA_SheetPropertiesFrame::CreateControls()
     itemBoxSizer2->Add( itemBoxSizer15, 0, wxALIGN_CENTER_HORIZONTAL | wxALL, 5 );
 
     wxButton*   itemButton16 = new wxButton( itemDialog1, wxID_CANCEL, _(
-                                                 "&Cancel" ), wxDefaultPosition, wxDefaultSize, 0 );
+            "&Cancel" ), wxDefaultPosition, wxDefaultSize, 0 );
     itemButton16->SetForegroundColour( wxColour( 0, 0, 255 ) );
     itemBoxSizer15->Add( itemButton16, 0, wxALIGN_CENTER_VERTICAL | wxALL, 5 );
 
     wxButton* itemButton17 = new wxButton( itemDialog1, wxID_OK, _(
-                                               "&OK" ), wxDefaultPosition, wxDefaultSize, 0 );
+            "&OK" ), wxDefaultPosition, wxDefaultSize, 0 );
     itemButton17->SetForegroundColour( wxColour( 196, 0, 0 ) );
     itemBoxSizer15->Add( itemButton17, 0, wxALIGN_CENTER_VERTICAL | wxALL, 5 );
 
@@ -300,29 +300,36 @@ void WinEDA_SheetPropertiesFrame::SheetPropertiesAccept( wxCommandEvent& event )
     }
 
     ChangeFileNameExt( FileName, g_SchExtBuffer );
-	if ( (FileName != m_CurrentSheet->GetFileName()) )
-	{
-        msg = _("Changing a Filename can change all the schematic structure and cannot be undone" );
-		msg << wxT("\n");
-		msg << _("Ok to continue renaming?");
-        if( m_CurrentSheet->m_AssociatedScreen == 0 || IsOK( NULL, msg) )
-		{ //do not prompt on a new sheet. in fact, we should not allow a sheet to be created 
-		 //without a valid associated filename to be read from.
-			m_Parent->GetScreen()->ClearUndoRedoList();
-			m_CurrentSheet->ChangeFileName(m_Parent, FileName);
-		}
-	}
+
+    /* m_CurrentSheet->m_AssociatedScreen must be a valide screen, and the sheet must have a valid associated filename,
+     * so we must call m_CurrentSheet->ChangeFileName to set a filename,
+     * AND always when a new sheet is created ( when m_CurrentSheet->m_AssociatedScreen is null ),
+     * to create or set an Associated Screen
+     */
+    if( ( FileName != m_CurrentSheet->GetFileName() )
+       || ( m_CurrentSheet->m_AssociatedScreen == NULL) )
+    {
+        msg = _( "Changing a Filename can change all the schematic structure and cannot be undone" );
+        msg << wxT( "\n" );
+        msg << _( "Ok to continue renaming?" );
+        if( m_CurrentSheet->m_AssociatedScreen == NULL || IsOK( NULL, msg ) )
+        { //do not prompt on a new sheet. in fact, we should not allow a sheet to be created
+          //without a valid associated filename to be read from.
+            m_Parent->GetScreen()->ClearUndoRedoList();
+            m_CurrentSheet->ChangeFileName( m_Parent, FileName );   // set filename and the associated screen
+        }
+    }
 
     msg = m_FileNameSize->GetValue();
     m_CurrentSheet->m_FileNameSize =
         ReturnValueFromString( g_UnitMetric,
-                               msg, m_Parent->m_InternalUnits );
+            msg, m_Parent->m_InternalUnits );
 
     m_CurrentSheet->m_SheetName = m_SheetNameWin->GetValue();
     msg = m_SheetNameSize->GetValue();
     m_CurrentSheet->m_SheetNameSize =
         ReturnValueFromString( g_UnitMetric,
-                               msg, m_Parent->m_InternalUnits );
+            msg, m_Parent->m_InternalUnits );
 
     if( ( m_CurrentSheet->m_SheetName.IsEmpty() ) )
     {
@@ -422,8 +429,8 @@ void WinEDA_SchematicFrame::ReSizeSheet( DrawSheetStruct* Sheet, wxDC* DC )
     while( sheetlabel )
     {
         s_SheetMindx = MAX( s_SheetMindx,
-                           (int) ( (sheetlabel->GetLength() +
-                                    1) * sheetlabel->m_Size.x ) );
+            (int) ( (sheetlabel->GetLength() +
+                     1) * sheetlabel->m_Size.x ) );
         s_SheetMindy = MAX( s_SheetMindy, sheetlabel->m_Pos.y - Sheet->m_Pos.y );
         sheetlabel   = (DrawSheetLabelStruct*) sheetlabel->Pnext;
     }
@@ -475,9 +482,9 @@ static void DeplaceSheet( WinEDA_DrawPanel* panel, wxDC* DC, bool erase )
     if( Sheet->m_Flags & IS_RESIZED )
     {
         Sheet->m_Size.x = MAX( s_SheetMindx,
-                               screen->m_Curseur.x - Sheet->m_Pos.x );
+            screen->m_Curseur.x - Sheet->m_Pos.x );
         Sheet->m_Size.y = MAX( s_SheetMindy,
-                               screen->m_Curseur.y - Sheet->m_Pos.y );
+            screen->m_Curseur.y - Sheet->m_Pos.y );
         SheetLabel = Sheet->m_Label;
         while( SheetLabel )
         {
