@@ -5,6 +5,15 @@ Started 2007-June-11
 Please add newer entries at the top, list the date and your name with
 email address.
 
+2008-Mar-30 UPDATE  Jean-Pierre Charras <jean-pierre.charras@inpg.fr>
+================================================================================
++eeschema
+    Solved: eeschema crashes when create a new sheet, using the default filename and enter it.
++all:
+    Added comments in gestfich.cpp to explain the default paths used by kicad to find help files and lib files
+
+
+
 2008-Mar-30 UPDATE  Jonas Diemer <diemer-at-gmx.de>
 ================================================================================
 +eeschema
